<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotxt"
    android:contentDescription="@null"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/ingrese_sus_datos"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="#79AEB8B7"
        android:hint="@string/nombre"
        android:inputType="text"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="#818080"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="#79AEB8B7"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="#818080"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="#79AEB8B7"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="#818080"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="phone"
        android:background="#79AEB8B7"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="#818080"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:background="#79AEB8B7"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingEnd="0dp"
        android:textColor="@android:color/black"
        android:textColorHint="#818080"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/confPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:background="#79AEB8B7"
        android:hint="@string/confirmar_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingEnd="0dp"
        android:textColor="@android:color/black"
        android:textColorHint="#818080"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrarseBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="#FF5722"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelarRegistroBtn"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="#BFFF9800"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF" />


</LinearLayout>
