<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotxt"
    android:contentDescription="@null"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ic_launcher_round"
        android:layout_width="147dp"
        android:layout_height="170dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/law_ita"
        android:textColor="#B61515"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_launcher"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="#95FF9800"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:textColorHint="#818080"
        android:textColor="@android:color/black"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:background="#94FF9800"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textColorHint="#818080"
        android:textColor="@android:color/black"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="#F44336"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/no_tiene_una_cuenta"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="30dp"
            android:text="@string/registrarme_ahora"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </RelativeLayout>

</LinearLayout>

