<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotxt"
    android:orientation="vertical"
    tools:context=".verCitaActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dateCBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:text="@string/fechaC"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextDateC"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="101dp" />

        <EditText
            android:id="@+id/editTextDateC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="date"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="104dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timeCBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:text="@string/hora"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTimeC"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="101dp" />

        <EditText
            android:id="@+id/editTextTimeC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="date"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="104dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView5C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/explicacion"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="314dp" />

    <EditText
        android:id="@+id/editTextDescripcionC"
        android:layout_width="347dp"
        android:layout_height="205dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="355dp" />

    <Button
        android:id="@+id/guardarCitaCBtn"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/actualizar_cita"
        android:textColor="#FFFFFF"
        android:textColorHint="#FF5722"
        android:textColorLink="#FF5722"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTimeC" />
</LinearLayout>